# tree_menu

./: .gitignore  README.md  pyproject.toml
tree_menu_project/: Makefile  manage.py  pytest.ini
tree_menu_project/tests/: conftest.py  test_menu.py
tree_menu_project/tree_menu/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
tree_menu_project/tree_menu/migrations/: 0001_initial.py
tree_menu_project/tree_menu/templates/: about.html  base.html  contact.html  home.html  parent.html
tree_menu_project/tree_menu/templates/tree_menu/: menu.html
tree_menu_project/tree_menu/templatetags/: draw_menu.py
